--- a/css/main.css
+++ b/css/main.css
@@ -4,5 +4,14 @@ header {
 }
 
 form {
-margin: 0 0 10px 30px;
+	margin: 0 0 10px 30px;
+}
+
+ul {
+	margin-left: 10px;
+}
+
+.call-results {
+	margin: 0 0 20px 40px;
+	font-size: 12px;
 }
